updates deps & fix dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700);
 
@@ -14,7 +14,7 @@ body {
 /** DESIGN TWO COLUMNS **/
 
 header {
-  @apply text-center bg-gray-500 dark:bg-gray-900 dark:text-gray-300;
+@apply text-center bg-gray-500 dark:bg-gray-900 dark:text-gray-300;
   background: url(/assets/fanart/000-the-prelude.jpg) top left #464646;
 }
 
